kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ndelius-new-tech
  labels:
    app: ndelius-new-tech-app
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: ndelius-new-tech-app
  template:
    metadata:
      labels:
        app: ndelius-new-tech-app
    spec:
      containers:
        - name: ndelius-new-tech
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/probation-services/ndelius-new-tech:latest
          ports:
            - containerPort: 8000
