kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ndelius-new-tech-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - ndelius-new-tech.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
    - host: ndelius-new-tech.apps.live-1.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: ndelius-new-tech-service
              servicePort: 8000
